# COMAR

api/: inventory_scanner.py  setup.py
api/comar/: __init__.py  network.py  service.py  utility.py
api/examples/qt6/: Makefile  app.py  mainform.ui
belgeler/: Boot.Loader.py  comar-polkit.txt
betikler/: pppoe.py
comar/: CMakeLists.txt
comar/config/: tr.org.pardus.comar.conf  tr.org.pardus.comar.service
comar/include/: bus.h  config.h  db.h  iksemel.h  log.h  loop.h  policy.h  process.h  pydbus.h  script.h  utils.h
comar/models/: User.Manager.xml  Xorg.Display.xml
comar/policy/: tr.org.pardus.comar.boot.loader.policy  tr.org.pardus.comar.boot.modules.policy  tr.org.pardus.comar.disk.manager.policy  tr.org.pardus.comar.net.filter.policy  tr.org.pardus.comar.net.link.policy  tr.org.pardus.comar.net.share.policy  tr.org.pardus.comar.net.stack.policy  tr.org.pardus.comar.policy  tr.org.pardus.comar.system.manager.policy  tr.org.pardus.comar.system.package.policy  tr.org.pardus.comar.system.packagehandler.policy  tr.org.pardus.comar.system.service.policy  tr.org.pardus.comar.system.settings.policy  tr.org.pardus.comar.time.clock.policy  tr.org.pardus.comar.user.manager.policy  tr.org.pardus.comar.xorg.display.policy  tr.org.pardus.comar.xorg.driver.policy
comar/src/: bus.c  config.c  db.c  iksemel.c  log.c  loop.c  main.c  policy.c  process.c  pydbus.c  script.c  utils.c
comar/tests/: hav.py  run.sh  test.py
comar/tests/example/: apache.py
comar/tools/: comar2to3.py  hav.py
